# ruxy

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  nx.json  package-lock.json  package.json  render.ts  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json
crates/build_script/: Cargo.toml
crates/build_script/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  helpers.rs  lib.rs
crates/compiler/src/: compile_route.rs  lib.rs
crates/config/src/: parse.rs
crates/macro/: Cargo.toml
crates/macro/src/: app.rs  helpers.rs  lib.rs  page.rs  page_generator.rs  page_loader.rs  props.rs
crates/macro/src/app/: config.rs  errors.rs  handler.rs  routes.rs
crates/macro/src/app/handler/: gen_handler_function.rs  router.rs  trailing_slash.rs
crates/macro/src/app/handler/router/: context.rs  generate.rs  render.rs  render_trie.rs  trie.rs  wrappers.rs
crates/macro/src/app/handler/router/generate/: responder.rs
crates/macro/src/app/handler/router/wrappers/: custom_match.rs  dynamic_sequence.rs  url_matcher.rs
crates/macro/src/app/routes/: gen_module_declarations.rs  gen_route_match_function.rs  gen_routing_function.rs  get_route_modules.rs
crates/macro/src/helpers/: get_project_dir.rs  params.rs  route_file.rs  routes_watch.rs
crates/routing/: Cargo.toml
crates/routing/src/: instruction.rs  lib.rs  route_tree.rs  segment.rs  sequence.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: executor.rs  lib.rs  page.rs  redirect.rs  request.rs  response.rs  routing.rs  runtime.rs  server.rs
crates/runtime/src/page/: context.rs  error.rs  generator.rs  loader.rs  props.rs
crates/runtime/src/page/error/: caught.rs  downcastable.rs
crates/runtime/src/page/loader/: error.rs  internal.rs  loader_return.rs  output.rs
crates/runtime/src/request/: path_params.rs
crates/runtime/src/request/path_params/: path_param.rs
crates/runtime/src/response/: chunk.rs
crates/ruxy/: Cargo.toml
crates/ruxy/src/: lib.rs  main.rs  request.rs
crates/ruxy/src/request/: cookies.rs  headers.rs
crates/ruxy_macro/: Cargo.toml
crates/ruxy_macro/src/: app.rs  lib.rs
crates/sand/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json
crates/sand/src/: app.rs
crates/sand/src/routes/(grp)/aa/{rest[0..3](0..2)}/{country(2)}-{my_name(0..)}-{id(2)}-suf/{nextparam}/lofas/: error_page.rs  page.rs
crates/sand/src/routes/(grp)/aa/{rest[0..3](0..2)}/{country(2)}-{my_name(0..)}-{id(2)}-suf/{nextparam}/lofas/api/: handler.rs
crates/sand/src/routes/(grp)/aa/{rest[0..3](0..2)}/{country(2)}-{my_name(0..)}-{id(2)}-suf/{nextparam}/lofas/dynamic/: page.rs
crates/sand/src/routes/(grp)/aa/{rest[0..3](0..2)}/{country(2)}-{my_name(0..)}-{id(2)}-suf/{nextparam}/lofas/static/: page.rs
crates/sand/src/routes/hello/$name/: page.rs
crates/sand/src/routes/hello/p-{name}-s%7B/: page.tsx
crates/sand/src/routes/hello/{name}/: page.rs
crates/util/: Cargo.toml
crates/util/src/: decode_hex_pair.rs  fs.rs  hex.rs  lib.rs  radix_trie.rs
packages_rs/compiler/: Cargo.toml
packages_rs/config/: Cargo.toml
packages_rs/config/src/: config.rs  gen_config_module.rs  lib.rs  trailing_slash.rs
packages_rs/macro/: Cargo.toml
packages_rs/macro/src/: app.rs  build.rs  config.rs  helpers.rs  lib.rs
packages_rs/macro/src/app/: config.rs  handler.rs
packages_rs/macro/src/app/handler/: trailing_slash.rs
packages_rs/macro/src/app/handler/router/: context.rs  generate.rs  render.rs
packages_rs/macro/src/app/input/: parse.rs
packages_rs/macro/src/app/routes/: get_route_modules.rs
packages_rs/macro/src/helpers/: route_file.rs
packages_rs/routing/: Cargo.toml
packages_rs/routing/src/: instruction.rs  lib.rs  route_tree.rs
packages_rs/runtime/: Cargo.toml
packages_rs/runtime/src/: hyper.rs  lib.rs  runtime.rs
packages_rs/ruxy/: Cargo.toml
packages_rs/ruxy/src/: lib.rs
packages_rs/sand/: .gitignore  Cargo.toml  build.rs
packages_rs/server/: Cargo.toml
packages_rs/server/src/: lib.rs  not_found.rs  server.rs  threads.rs
packages_rs/server/src/page/: loadable.rs
packages_rs/server/src/page/loadable/: internal.rs  output.rs
packages_rs/server/src/response/: buffer.rs
packages_ts/navigation/: README.md  package.json  project.json
(+60 files in other folders)
