[workspace]
members = ["packages_rs/*"]
resolver = "2"

[profile.release]
lto = true
opt-level = 3

[workspace.lints.clippy]
new_without_default = "allow"

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["default", "rt", "net", "rt-multi-thread", "sync"] }
hyper = "1.6.0"
bytes = "1.10.1"
