[package]
name = "ruxy_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
ruxy_util = { path = "../util" }

tokio = { version = "1.45.0", features = ["full"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.12", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
bytes = "1.10.1"
async-stream = "0.3.6"
urlencoding = "2.1.3"

[lints]
workspace = true
