[package]
name = "ruxy_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
ruxy_util = { path = "../util" }

tokio = { version = "1.45.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.12", features = ["full"] }
typeid = { version = "1.0.3" }
futures = "0.3.31"
futures-util = "0.3.31"
bytes = "1.10.1"

[lints]
workspace = true
