[package]
name = "ruxy"
version = "0.1.0"
edition = "2024"

description = "Rust speed. React simplicity. Ruxy."
homepage = "https://ruxy.dev"
repository = "https://github.com/rustware/ruxy"
documentation = "https://ruxy.dev/docs"
license = "MIT"

[dependencies]
ruxy_cli = { path = "../cli" }
ruxy_macro = { path = "../macro" }
ruxy_runtime = { path = "../runtime" }
