[package]
name = "sand"
description = "Playground application used for local development of Ruxy"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[[bin]]
name = "sand"
path = "src/app.rs"

[dependencies]
ruxy = { path = "../ruxy" }

# Testing (remove when done):
bytes.workspace = true
hyper = "1.6.0"

[build-dependencies]
ruxy_build_script = { path = "../build_script" }

[lints]
workspace = true
