[package]
name = "ruxy"
version = "0.1.0"
edition = "2024"

description = "Web framework for Rust and React"
homepage = "https://ruxy.dev"
repository = "https://github.com/rustware/ruxy"
documentation = "https://ruxy.dev/docs"
license = "MIT"

[dependencies]
ruxy_cli = { path = "../cli" }
ruxy_macro = { path = "../macro" }
ruxy_server = { path = "../server" }
ruxy_config = { path = "../config" }
