[package]
name = "ruxy_server"
version = "0.1.0"
edition = "2024"

[dependencies]
ruxy_util = { path = "../util" }
ruxy_runtime = { path = "../runtime" }

tokio.workspace = true
hyper.workspace = true
hyper-util = { version = "0.1.12", features = ["full"] }
flume = "0.11.1"
typeid = { version = "1.0.3" }
futures = "0.3.31"
futures-util = "0.3.31"
bytes.workspace = true

[lints]
workspace = true
